--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            WEB MAPPING class activity
+        </title>
+    </head>
+
+    <h1>
+        Table of contents
+    </h1>
+    <body>
+        <img src="Image.jpg", width="400px", height="300px", 
+            border="solid", style="float: right; ;margin-right: 120px; background-color:red"  >
+    </body>
+    <p>
+        <a href="#intro">Introduction</a><br />
+        <a href="#bg"> Some background</A><br />
+        <a href="#his">Project History</a><br />
+        ...the rest of the table of contents...
+        <!-- The document text follows here -->
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <h2 id="intro">Introduction</h2>
+        ... Section 1 follows here ...
+        <h2 id="bg">Some background</h2>
+        ... Section 2 follows here ...
+        <h3 id="his">Project History</h3>
+        ... Section 2.1 follows here ...
+    </p>
+
+    <body>
+        My first Web Page in HTML!
+        <!--comment here-->
+        <!-- <img src="Image.jpg", width="400px", height="300px", 
+            border="solid", style="float: right; ;margin-right: 120px; background-color:red"  > -->
+    </body>
+
+<!-- </html>
+
+<html> -->
+    <head>
+        <style type="text/css">
+            p { font-size: 12pt; line-height: 12pt; }
+            p:first-letter { font-size: 200%; }
+            span { text-transform: uppercase; }
+        </style>
+    </head>
+    
+    <body>
+        <p>a styles demo.<br />
+            write with <span style=uppercase>in-line</span><br />
+            <span>Test uppercase</span>.
+        </p>
+        
+        <a href="https://github.com/grace-du">Go to the Grace's github home page</a>
+
+        <div style="font-size:24px; color:red">
+            DIV example
+        </div>
+        <p>Make the text in <span style="color:red;font- weight:bold">red color</span>.
+        </p>
+    </body>
+    <body>
+        <h1>
+            Introduction
+        </h1>
+    </body>
+</html>
